--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "internship-management-system-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
