--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.1",
     "react": "^18.0.0",
     "react-data-table-component": "^7.5.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
