--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-data-table-component": "^7.5.0",
     "react-datepicker": "^4.7.0",
