--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
