--- a/server/package.json
+++ b/server/package.json
@@ -10,24 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cowsay": "^1.5.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "figlet": "^1.5.2",
-    "gradient-string": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "gradient-string": "^2.0.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0",
-    "sharp": "^0.30.4"
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
-    "eslint": "^8.13.0",
-    "nodemon": "^2.0.15"
+    "eslint": "^8.30.0",
+    "nodemon": "^2.0.20"
   }
 }
